--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@unocss/transformer-variant-group": "^66.1.0-beta.3",
     "@vitejs/plugin-vue": "^5.2.1",
+    "unocss": "^66.1.0-beta.3",
     "vite": "^6.2.0"
   }
 }
