chore: install unplugin-vue-components

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@unocss/transformer-variant-group": "^66.1.0-beta.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "unocss": "^66.1.0-beta.3",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0"
   }
 }
