--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "unocss": "^66.1.0-beta.3",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-mock": "^3.0.2"
   }
 }
