--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.8.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xe-utils": "^3.7.4"
   },
   "devDependencies": {
     "@unocss/transformer-variant-group": "^66.1.0-beta.3",
