--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "web-storage-cache": "^1.1.1",
     "xe-utils": "^3.7.4"
   },
   "devDependencies": {
