--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ant-design-vue": "^4.2.6",
     "axios": "^1.8.1",
     "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
     "pinia": "^3.0.1",
+    "validator": "^13.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "web-storage-cache": "^1.1.1",
