chore: install icon-park & remove antd icon

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^7.0.1",
+    "@icon-park/vue-next": "^1.4.2",
     "@vueuse/core": "^13.0.0",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.2.6",
