--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.1",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.1",
     "validator": "^13.15.0",
     "vue": "^3.5.13",
